Fixed dropdown overlapping profile error.

--- a/static/css/argon-design-system.css
+++ b/static/css/argon-design-system.css
@@ -15769,6 +15769,9 @@ button.section-darker:focus {
     .mt--200 {
         margin-top: -200px !important;
     }
+    .mt--250 {
+        margin-top: -250px !important;
+    }
     .mb--200 {
         margin-bottom: -200px !important;
     }
